# polymarket-arbitrage-bot

./: Cargo.toml  README.md  SCANNER.md
bins/debug-scan/: Cargo.toml
bins/debug-scan/src/: main.rs
bins/executor/: Cargo.toml
bins/executor/src/: main.rs
bins/latency-bench/: Cargo.toml
bins/latency-bench/src/: main.rs
bins/notifier/: Cargo.toml
bins/notifier/src/: main.rs
bins/scanner/: Cargo.toml
bins/scanner/src/: main.rs
bins/unified/: Cargo.toml
bins/unified/src/: main.rs
crates/moonbag-analyzer/: Cargo.toml
crates/moonbag-analyzer/src/: gas.rs  lib.rs  opportunity.rs  quick_check.rs  vwap.rs
crates/moonbag-contracts/: Cargo.toml
crates/moonbag-contracts/src/: addresses.rs  erc1155.rs  lib.rs  neg_risk_adapter.rs  safe_executor.rs
crates/moonbag-core/: Cargo.toml
crates/moonbag-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/moonbag-executor/: Cargo.toml
crates/moonbag-executor/src/: buy.rs  clob_auth.rs  convert.rs  lib.rs  order_builder.rs  order_signer.rs  pre_check.rs  sell.rs  settlement.rs
crates/moonbag-notifier/: Cargo.toml
crates/moonbag-notifier/src/: lib.rs  telegram.rs
crates/moonbag-queue/: Cargo.toml
crates/moonbag-queue/src/: file_queue.rs  lib.rs
crates/moonbag-scanner/: Cargo.toml
crates/moonbag-scanner/src/: bootstrap.rs  gamma_api.rs  health.rs  lib.rs  orderbook.rs  reconciler.rs  store.rs  ws_client.rs
scripts/: convert_relayer.py  convert_retry.py
