[workspace]
resolver = "2"
members = [
    "crates/moonbag-core",
    "crates/moonbag-contracts",
    "crates/moonbag-analyzer",
    "crates/moonbag-scanner",
    "crates/moonbag-executor",
    "crates/moonbag-queue",
    "crates/moonbag-notifier",
    "bins/scanner",
    "bins/executor",
    "bins/unified",
    "bins/debug-scan",
    "bins/latency-bench",
    "bins/notifier",
    "bins/market-watch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Moonbag Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "parking_lot"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Blockchain / Ethereum
alloy = { version = "0.8", features = [
    "full",
    "signer-local",
    "provider-http",
    "contract",
    "sol-types",
    "json-abi",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Math & Decimals
rust_decimal = { version = "1.37", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.37"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Storage
redb = "2.4"

# Utilities
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
dotenvy = "0.15"

# Internal crates
moonbag-core = { path = "crates/moonbag-core" }
moonbag-contracts = { path = "crates/moonbag-contracts" }
moonbag-analyzer = { path = "crates/moonbag-analyzer" }
moonbag-scanner = { path = "crates/moonbag-scanner" }
moonbag-executor = { path = "crates/moonbag-executor" }
moonbag-queue = { path = "crates/moonbag-queue" }
moonbag-notifier = { path = "crates/moonbag-notifier" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
lto = "thin"
