[package]
name = "debug-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
moonbag-core = { path = "../../crates/moonbag-core" }
moonbag-analyzer = { path = "../../crates/moonbag-analyzer" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.39", features = ["serde-with-str"] }
reqwest = { version = "0.12", features = ["json"] }
