[package]
name = "moonbag-notifier-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moonbag-notifier"
path = "src/main.rs"

[dependencies]
moonbag-core = { workspace = true }
moonbag-notifier = { workspace = true }
moonbag-scanner = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
