[package]
name = "moonbag-scanner-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moonbag-scanner"
path = "src/main.rs"

[dependencies]
moonbag-core = { workspace = true }
moonbag-analyzer = { workspace = true }
moonbag-scanner = { workspace = true }
moonbag-executor = { workspace = true }
moonbag-queue = { workspace = true }
moonbag-notifier = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
