[package]
name = "moonbag-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
