[package]
name = "moonbag-notifier"
version.workspace = true
edition.workspace = true

[dependencies]
moonbag-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
