[package]
name = "moonbag-queue"
version.workspace = true
edition.workspace = true

[dependencies]
moonbag-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
