[package]
name = "moonbag-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
moonbag-core = { workspace = true }
moonbag-analyzer = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tempfile = "3"
